# black-hole

./: .gitignore  Cargo.toml  README.md
blackhole/: Cargo.toml
blackhole/benches/: dist_fn.rs
blackhole/src/: camera.rs  filter.rs  frame.rs  framebuffer.rs  lib.rs  lut.rs  marcher.rs  material.rs  math.rs  object.rs  scene.rs  shader.rs  texture.rs
blackhole/src/object/: aabb.rs  distortion.rs  shape.rs
blackhole/src/object/shape/: composite.rs  cube.rs  cylinder.rs  sphere.rs
blackhole/src/texture/: perlin.rs  worley.rs
cli/: Cargo.toml
cli/src/: args.rs  main.rs  renderer.rs
cli/src/renderer/: cli.rs
common/: Cargo.toml
common/benches/: star_sky.rs
common/src/: lib.rs  scene_loader.rs  shaders.rs
common/src/shaders/: basic_solid.rs  star_sky.rs
gl_wrapper/: Cargo.toml
gl_wrapper/src/: framebuffer.rs  lib.rs  program.rs  renderer.rs  texture.rs
images/: blackhole.avif
interactive/: Cargo.toml
interactive/src/: app.rs  args.rs  main.rs  renderer.rs
interactive/src/gl_shaders/: quad.glsl
interactive/src/renderer/: interactive.rs
scenes/: atmosphere.json5  blackhole.json5  cornell.json5  test.json5  volume-cubes.json5
src/: args.rs  camera.rs  framebuffer.rs  lib.rs  light.rs  main.rs  math.rs  object.rs  scene.rs  shader.rs  texture.rs
src/object/: aabb.rs  distortion.rs  shape.rs
src/object/shape/: composite.rs  cylinder.rs  sphere.rs
src/shader/: specific.rs
tester/: Cargo.toml  tests.toml
tester/images/: .gitignore
tester/src/: args.rs  config.rs  main.rs
