[package]
name = "black-hole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17"
cgmath = { version = "0.18", features = ["swizzle"] }
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.5"
clap = { version = "4.0.10", features = ["derive"] }
once_cell = "1.16.0"

[profile.release]
debug = true
