[package]
name = "blackhole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blackhole"
path = "src/bin/blackhole/main.rs"

[[bin]]
name = "blackhole-cli"
path = "src/bin/blackhole/main-cli.rs"

[dependencies]
png = "0.17"
cgmath = { version = "0.18", features = ["swizzle"] }
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.5"
clap = { version = "4.0.10", features = ["derive"] }
once_cell = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4.1"
winit = { version = "0.27.5", features = ["x11"], default-features = false }
glutin = "0.30.2"
glutin-winit = { version = "0.2.1", features = ["egl", "glx", "x11", "wgl"], default-features = false }
raw-window-handle = "0.5.0"
gl = "0.14.0"
gl_wrapper = {path = "../gl_wrapper"}
thiserror = "1.0.37"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "dist_fn"
harness = false