[package]
name = "blackhole"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = { version = "0.18", features = ["swizzle"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_xoshiro = "0.6.0"
once_cell = "1.16.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "dist_fn"
harness = false