[package]
name = "blackhole-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
png = "0.17"
cgmath = { version = "0.18", features = ["swizzle"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng", "small_rng"] }
rand_xoshiro = "0.6.0"
rayon = "1.5"
clap = { version = "4.0.10", features = ["derive"] }
blackhole = { path = "../blackhole" }
blackhole-common = { path = "../common" }
